<resources>
    <string name="app_name">Movie App</string>
    <string name="category">Category</string>
    <string name="overview">Overview: </string>
    <string name="ex_overview">Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a saga.</string>
    <string name="message_error_no_internet">Oops, Your internet is loss.</string>
    <string name="message_error_no_internet_body">"Please check your internet connect "</string>
    <string name="message_empty_favourite_header">Yawn, You don\'t have favourite movie yet.</string>
    <string name="message_empty_favourite_body">Let\'s find interesting movie in this app</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="imdb_rating_template">IMDB %s/5.0</string>
    <string name="favourite">favourite</string>
    <string name="favourite_list">Favourite List</string>
    <string name="message_success_remove_movie_from_favourite">Remove movie from favourite</string>
    <string name="message_success_add_movie_from_favourite">Add movie to favoruite</string>
    <string name="message_empty_favourite_movie_list">You have not favourite movie yet</string>
    <string name="ex_review_content">The Dilwale Dulhania Le Jayenge is a film considered by most to be one of the greatest ever made. From The American Film Institute to as voted by users on the Internet Movie Database (IMDB) it is consider to be one of the best.</string>
    <string name="reviews_header">Reviews</string>
    <string name="message_empty_reviews_header">No Reviews</string>
    <string name="message_empty_reviews_body">Oops, there is no reviews</string>
    <string name="message_error_footer_movie">Oops, there is problem next data</string>
    <string name="retry">Retry</string>
</resources>