<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_3"
        android:background="@color/colorShimmer"
        android:layout_marginTop="@dimen/dimen_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvPopularMovie"
        style="@style/ActionItem"
        android:layout_marginTop="8dp"
        android:text="@string/popular_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSeparator" />

    <TextView
        android:id="@+id/tvUpcomingMovie"
        style="@style/ActionItem"
        android:text="@string/upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPopularMovie" />

    <TextView
        android:id="@+id/tvTopRatedMovie"
        style="@style/ActionItem"
        android:text="@string/top_rated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpcomingMovie" />

    <TextView
        android:id="@+id/tvNowPlaying"
        style="@style/ActionItem"
        android:text="@string/now_playing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopRatedMovie" />
</androidx.constraintlayout.widget.ConstraintLayout>