<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/dimen_16"
    android:visibility="visible">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieNoInternetConnection"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="@dimen/dimen_150"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/no_internet_connection.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tvNoInternetHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/message_error_no_internet"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieNoInternetConnection" />

    <TextView
        android:id="@+id/tvNoInternetBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/message_error_no_internet_body"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternetHeader" />

    <Button
        android:id="@+id/btnRetryLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternetBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>