<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/dimen_16">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:minHeight="@dimen/dimen_150"
        app:cardCornerRadius="@dimen/dimen_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_100"
            android:paddingStart="@dimen/dimen_36"
            android:paddingTop="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:paddingBottom="@dimen/dimen_16">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorShimmer"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Guardian Of The Galaxy - Vol 2" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_7"
                android:background="@color/colorShimmer"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
                tools:text="12 Agustus 2019" />

            <TextView
                android:id="@+id/tvHeaderOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/colorShimmer"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3"
                android:background="@color/colorShimmer"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeaderOverview"
                tools:text="@string/ex_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivMovie"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_150"
        android:layout_marginStart="@dimen/dimen_16"
        android:contentDescription="@string/app_name"
        android:elevation="@dimen/dimen_3"
        android:src="@color/colorShimmer"
        app:layout_constraintBottom_toBottomOf="@+id/cvMovie"
        app:layout_constraintStart_toStartOf="@+id/cvMovie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>